# GAIA_AI_Agent

./: .gitignore  README.md  agent.py  app.py  base_prompt.txt  code_interpreter.py  image_processing.py  pyproject.toml  requirements.txt  tools.py
.github/workflow/: sync-to-hf.yml
notebooks/: agent_test.ipynb
